# ComputerOrganizationPrinciples

AI_Project/docker-my-mycroft-precise/: dockerfile  main.py  mike-test.pb  mike-test.pb.params  pipestream.py  requirements.txt
AI_Project/langchain-assistant/: .env  LangChain+Rag.ipynb  chat_local.py  main.py  pyproject.toml  qa_from_doc.py  settings.py  your_file.txt
AI_Project/langchain-assistant/FastAPI/: fast_example.py
AI_Project/langchain-assistant/langchain-learn/: 1_langchain_commu_ollama.py  2_langchain_chatPromptTemplate.py  3_langchain_memory_chat.py
AI_Project/langchain-assistant/promot_project/吴恩达_提示工程/: 1_提示工程_guidelines.py
AI_Project/langchain-assistant/voice_assistant/: load_model_and_set_role.py
AI_Project/langchain-assistant/voice_assistant/produce_wake_word_audio/: produce_audio_for_train.py
AI_Project/langchain-assistant/voice_assistant/tools/: cb_time.py
AI_Project/langchain-assistant/voice_assistant/voice_wake_up/: continue_audio_record.py  create_pipe_and_docker_init.py  get_voice.py  pipestream.py
KG/: movieknowledgegraph.ipynb  pyproject.toml
KG/app/: llm_action.py  llm_langchian_action.py  movieknowledgegraph.ipynb  readPdf.py
KG/env_config/: .env.studiomac
MCP/ChatbotExample/: ChatBot.py  MultiServerChatBot.py  MultiServerWithResourceAndPromptChatbot.py  MutiServerChatBot.py  asyncio_learn.py  asyncio_learn_p1.ipynb  asyncio_learn_p2.py  main.py  (+9 more)
langchain-assistant/: LangChain+Rag.ipynb  QA_Conversation_Memory.py  prompt_router.py  requirements.txt
吴恩达/: 机器学习.xmind
概率论/:  概率论-随机变量及其分布.md  2.二维随机变量及其分布.md  概率论.xmind
(+66 files in other folders)
