[project]
name = "langchain-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "edge-tts>=7.0.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
]
